--- a/Supervised Learning/Decision Tree/C5.0/Decision Tree Using C5.0.ipynb
+++ b/Supervised Learning/Decision Tree/C5.0/Decision Tree Using C5.0.ipynb
@@ -31,10 +31,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b28378c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(dplyr)\n",
     "library(caTools)\n",
@@ -51,27 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "caf6a68d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#getwd()"
+    "# getwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6d5467e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loc = '/home/jovyan/work/github/Artificial-Intelligence/Supervised Learning/Decision Tree/Diabetes Data Case/Diabetes.csv'"
+    "loc = '/home/jovyan/work/github/Artificial-Intelligence/Supervised Learning/Decision Tree/CART/Diabetes.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ffb27f90",
    "metadata": {},
    "outputs": [],
