update conf matrix

--- a/Supervised Learning/Evaluation Classification/Confusion Matrix.ipynb
+++ b/Supervised Learning/Evaluation Classification/Confusion Matrix.ipynb
@@ -841,6 +841,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "84d795d3-317d-4f90-a6a7-517bed699b93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.33      0.25      0.29         4\n",
+      "           1       0.40      0.50      0.44         4\n",
+      "\n",
+      "    accuracy                           0.38         8\n",
+      "   macro avg       0.37      0.38      0.37         8\n",
+      "weighted avg       0.37      0.38      0.37         8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Tampilkan laporan\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(\n",
+    "    aktual,           # Label sebenarnya\n",
+    "    prediksi          # Prediksi model\n",
+    "))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c5daeb53-c032-4385-ade1-db1dc1526241",
    "metadata": {},
@@ -850,69 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "e7c43df2-454e-41a7-9f3b-d8a3a901f39b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>actual_1</th>\n",
-       "      <th>actual_0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>prediction_1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>prediction_0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              actual_1  actual_0\n",
-       "prediction_1         2         3\n",
-       "prediction_0         2         1"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_CM"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
-   "id": "d3e4f44f-1a9d-456b-b10a-4b008f9081cd",
+   "id": "e7c43df2-454e-41a7-9f3b-d8a3a901f39b",
    "metadata": {},
    "outputs": [
     {
@@ -967,12 +937,73 @@
     }
    ],
    "source": [
-    "df_cm"
+    "df_CM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "d3e4f44f-1a9d-456b-b10a-4b008f9081cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual_1</th>\n",
+       "      <th>actual_0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>prediction_1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prediction_0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              actual_1  actual_0\n",
+       "prediction_1         2         3\n",
+       "prediction_0         2         1"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "5d61350f-fd1e-4d54-9eec-c1cead1838bf",
    "metadata": {},
    "outputs": [
@@ -992,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "1ee01b67-ee47-441d-9542-0dcbab7409f5",
    "metadata": {},
    "outputs": [
