add gridsearch CV

--- a/Supervised Learning/Evaluation Classification/Tipe GridSearchCV.ipynb
+++ b/Supervised Learning/Evaluation Classification/Tipe GridSearchCV.ipynb
@@ -231,9 +231,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4ab2676-448d-4e1d-9af6-6de563656ec3",
+   "metadata": {},
+   "source": [
+    "## Perbandingan Jenis GridSearchCV dan Variasinya\n",
+    "\n",
+    "| Jenis | Strategi | Evaluasi | Kelebihan | Kekurangan |\n",
+    "|-------|-----------|-----------|------------|-------------|\n",
+    "| **GridSearchCV** | Mencoba *semua kombinasi* hyperparameter | Cross Validation | Akurat, deterministik, mudah direproduksi | Lambat jika ruang parameter besar |\n",
+    "| **RandomizedSearchCV** | Sampling *acak* dari ruang parameter | Cross Validation | Lebih cepat, fleksibel, cocok untuk ruang besar | Hasil bisa bervariasi antar run |\n",
+    "| **HalvingGridSearchCV** | *Successive halving* (bertahap, efisien) | CV bertingkat | Cepat, efisien untuk dataset besar | Masih eksperimen, setup agak kompleks |\n",
+    "| **HalvingRandomSearchCV** | Kombinasi *random search + halving* | CV bertingkat | Lebih cepat & adaptif | Hasil bisa kurang stabil |\n",
+    "| **Manual Loop (Custom)** | Looping & evaluasi manual | CV atau evaluasi manual | Paling fleksibel, bisa dikustomisasi penuh | Tidak otomatis, rawan kesalahan |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2911b46c-969f-4cc3-87cd-88cf7d111d14",
+   "metadata": {},
+   "source": [
+    "“Jenis GridSearchCV” dalam konteks luas berarti beragam metode pencarian hyperparameter berbasis cross-validation.\n",
+    "\n",
+    "- Kalau ingin hasil paling akurat → GridSearchCV\n",
+    "- Kalau ingin efisien dan scalable → RandomizedSearchCV atau HalvingGridSearchCV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515eca2a-03d7-43e3-b406-69013188b2d8",
+   "id": "0d79b614-5296-44c6-9702-51c23c5c83e1",
    "metadata": {},
    "outputs": [],
    "source": []
