--- a/Supervised Learning/Evaluation Classification/Tipe Cross Validation.ipynb
+++ b/Supervised Learning/Evaluation Classification/Tipe Cross Validation.ipynb
@@ -511,9 +511,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d7ebff6-8218-4a80-81d4-4663bc360d5c",
+   "metadata": {},
+   "source": [
+    "## Perbandingan Jenis Cross Validation (CV)\n",
+    "\n",
+    "| Jenis CV | Acak? | Menjaga Proporsi Kelas | Cocok Untuk | Kelebihan | Kekurangan |\n",
+    "|-----------|-------|-------------------------|--------------|------------|-------------|\n",
+    "| **KFold** | ❌ Tidak (bisa diacak manual) | ❌ Tidak | Data umum | Sederhana, mudah dipahami | Bisa bias jika data tersortir |\n",
+    "| **StratifiedKFold** | ❌ Tidak (bisa diacak manual) | ✅ Ya | Klasifikasi (terutama imbalanced) | Menjaga distribusi kelas, hasil adil | Tidak cocok untuk regresi |\n",
+    "| **LOOCV (Leave-One-Out)** | ❌ Tidak | ❌ Tidak | Dataset sangat kecil | Evaluasi sangat teliti | Mahal secara komputasi |\n",
+    "| **ShuffleSplit** | ✅ Ya | ❌ Tidak | Dataset besar / random testing | Cepat dan fleksibel | Proporsi kelas bisa tidak seimbang |\n",
+    "| **StratifiedShuffleSplit** | ✅ Ya | ✅ Ya | Klasifikasi imbalanced | Kombinasi adil + acak | Tidak bisa dipakai untuk regresi |\n",
+    "| **GroupKFold** | ❌ Tidak | ❌ Tidak | Data dengan grup (user, pasien, dsb) | Hindari kebocoran antar grup | Perlu kolom grup tambahan |\n",
+    "| **TimeSeriesSplit** | ❌ Tidak | ❌ Tidak | Data berurutan waktu | Cocok untuk forecasting | Tidak bisa diacak, potensi bias urutan |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0d42306-35be-49e2-a0a2-220bbfefde8e",
+   "id": "ddca7f76-aad7-4d47-8893-d27e478b0dd9",
    "metadata": {},
    "outputs": [],
    "source": []
